--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,7 +30,7 @@
             android:exported="false"
             android:screenOrientation="portrait"/>
         <activity
-            android:name=".collections.ContentListActivity"
+            android:name=".collections.CollectionListActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
     </application>
