--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,9 @@
             android:name=".collections.CollectionListActivity"
             android:exported="false"
             android:screenOrientation="portrait" />
+        <activity android:name=".WebViewActivity"
+            android:exported="false"
+            android:screenOrientation="portrait" />
     </application>
 
 </manifest>
