--- a/app/build.gradle
+++ b/app/build.gradle
@@ -84,12 +84,17 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.16.0'
 
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.1'
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:$rootProject.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$rootProject.lifecycleVersion"
+    implementation "androidx.lifecycle:lifecycle-process:$rootProject.lifecycleVersion"
 
     // Jetpack Navigation
     implementation "androidx.navigation:navigation-fragment-ktx:$rootProject.navigationVersion"
     implementation "androidx.navigation:navigation-ui-ktx:$rootProject.navigationVersion"
+
+    // media3
+    implementation "androidx.media3:media3-exoplayer:$rootProject.media3Version"
+    implementation "androidx.media3:media3-session:$rootProject.media3Version"
 
     // Testing
     testImplementation 'junit:junit:4.13.2'
