--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,8 @@
 buildscript {
     ext {
         navigationVersion = "2.7.7"
+        media3Version = "1.2.0"
+        lifecycleVersion = "2.6.2"
     }
     dependencies {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
